--- a/crates/guest/Cargo.toml
+++ b/crates/guest/Cargo.toml
@@ -10,4 +10,4 @@ repository = "https://github.com/Heraclito-Q-Saldanha/wasmtime_serde"
 [dependencies]
 serde = "1.0.152"
 bincode = "1.3.3"
-wasmtime_serde_guest_macro = {path = "../guest_macro"}
+wasmtime_serde_guest_macro = "0.1.0"
