--- a/crates/host/Cargo.toml
+++ b/crates/host/Cargo.toml
@@ -8,7 +8,7 @@ description = "Simple library for serializing complex types to the wasmtime runt
 repository = "https://github.com/Heraclito-Q-Saldanha/wasmtime_serde"
 
 [dependencies]
-wasmtime_serde_host_macro = {path = "../host_macro"}
+wasmtime_serde_host_macro = "0.1.0"
 wasmtime = "4.0.0"
 serde = "1.0.152"
 bincode = "1.3.3"
