--- a/crates/host/Cargo.toml
+++ b/crates/host/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/Heraclito-Q-Saldanha/wasmtime_serde"
 
 [dependencies]
 wasmtime_serde_host_macro = "0.1.0"
-wasmtime = "8.0.1"
+wasmtime = {version = "8.0.1", default-features = false, features = ["cranelift"]}
 serde = "1.0.160"
 bincode = "1.3.3"
 anyhow = "1.0.71"
